update manifest.json for fullscreen support

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "QOL",
   "start_url": ".",
   "scope": ".",
-  "display": "standalone",
-  "display_override": ["standalone"],
+  "display": "fullscreen",
+  "display_override": ["fullscreen", "standalone"],
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait",
