--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "scope": ".",
   "display": "standalone",
   "display_override": ["standalone"],
-  "background_color": "#121318",
-  "theme_color": "#121318",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "description": "Gamify your life with tasks, XP, levels, and rewards",
   "categories": ["productivity", "lifestyle", "utilities"],
@@ -16,28 +16,16 @@
   },
   "icons": [
     {
-      "src": "./icon-192.svg",
+      "src": "./icon-192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "./icon-192-maskable.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
-    },
-    {
-      "src": "./icon-512.svg",
+      "src": "./icon-512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
-    {
-      "src": "./icon-512-maskable.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
-    }
   ]
 }
